<package format="2">
  <name>g2o_catkin</name>
  <version>0.0.0</version>
  <description>g2o_catkin</description>
  <maintainer email="helenoleynikova@gmail.com">Helen Oleynikova</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>
